--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,23 @@ h1{
     font-size: large;
 
 }
+.linkes{
+    text-align: center;
+    border: 4px solid black;
+    padding: 4px;
+    margin: 8px;
+}
+p{
+    text-align: center;
+}
 ul{
+    text-align: center;
+    border: 4px solid black;
+    padding: 4px;
+    margin: 8px;
+}
+
+.top10{
     text-align: center;
     border: 4px solid black;
     padding: 4px;
