--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,10 @@ h1{
     border: 4px solid black;
     padding: 4px;
     margin: 8px;
+    font-size: 20px;
+    position: fixed;
+    top: 30px;
+    right: 30px;
 }
 p{
     text-align: center;
@@ -20,6 +24,8 @@ ul{
     border: 4px solid black;
     padding: 4px;
     margin: 8px;
+    font-size: 30px;
+
 }
 
 .top10{
@@ -27,4 +33,8 @@ ul{
     border: 4px solid black;
     padding: 4px;
     margin: 8px;
+    font-size: 30px;
+}
+img{
+    size: 30px;
 }
